--- a/.github/workflows/daily_check.yml
+++ b/.github/workflows/daily_check.yml
@@ -32,6 +32,9 @@ jobs:
       run: |
         git config --global user.name 'github-actions[bot]'
         git config --global user.email 'github-actions[bot]@users.noreply.github.com'
-        git add data/history.json
-        # Only commit if there are changes
-        git diff --quiet && git diff --staged --quiet || (git commit -m "Update history [skip ci]" && git push)
+        if [ -f data/history.json ]; then
+          git add data/history.json
+          git diff --quiet && git diff --staged --quiet || (git commit -m "Update history [skip ci]" && git push)
+        else
+          echo "No history file found to commit."
+        fi
