--- a/.github/workflows/daily_check.yml
+++ b/.github/workflows/daily_check.yml
@@ -5,6 +5,9 @@ on:
     - cron: '*/15 * * * *'  # Runs every 15 minutes
   workflow_dispatch:      # Allows manual trigger
 
+permissions:
+  contents: write
+
 jobs:
   check_updates:
     runs-on: ubuntu-latest
